fixed results page alignment

--- a/src/styles/topics.module.css
+++ b/src/styles/topics.module.css
@@ -1,9 +1,6 @@
 .multiselect {
   width: 400px;
   color: black;
-  position: relative;
-  top: 40%;
-  position: absolute;
 }
 
 .multiselect1 {
